# linux_mqtt_stm32_car

./: .gitignore  .ignore  README.md
imx6ull_app/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
imx6ull_app/src/: mqttClient.c
imx6ull_camera/: CMakeCache.txt  CMakeLists.txt  Makefile  camera  camera.c  camera_ffmpeg.c  cmake_install.cmake
imx6ull_daemon/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  monitorDaemon  monitor_daemon.c
imx6ull_lvgl/: CMakeLists.txt  lv_conf.h  lv_drv_conf.h
imx6ull_lvgl/include/: common.h
imx6ull_lvgl/lv_drivers/sdl/: sdl.c
imx6ull_lvgl/lvgl/src/extra/libs/ffmpeg/: lv_ffmpeg.c  lv_ffmpeg.h
imx6ull_lvgl/lvgl/src/font/: lv_font_SiYuanHeiTi_Bold_20.c
imx6ull_lvgl/src/: main.c
imx6ull_mqtt/: CMakeLists.txt
imx6ull_mqtt/include/: common.h
imx6ull_mqtt/src/: mqttClient.c
stm32_car/: .mxproject  sm32_car.ioc
stm32_car/.github/: copilot-instructions.md
stm32_car/Core/Inc/: FreeRTOSConfig.h  encoder.h  main.h  task_misc.h  task_mqtt.h  task_oled.h  usart.h
stm32_car/Core/Src/: OLED.c  OLED_Data.c  adc.c  encoder.c  gpio.c  main.c  stm32f1xx_it.c  task_misc.c  task_mqtt.c  tim.c  usart.c
stm32_car/MDK-ARM/: startup_stm32f103xb.lst  stm32_car.uvguix.wbj15  stm32_car.uvoptx  stm32_car.uvprojx  task_oled.c
stm32_car/MDK-ARM/RTE/_mqtt_car/: RTE_Components.h
stm32_car/MDK-ARM/RTE/_stm32_car/: RTE_Components.h
stm32_car/MDK-ARM/stm32_car/: adc.crf  adc.d  croutine.crf  croutine.d  event_groups.crf  event_groups.d  gpio.crf  gpio.d  heap_4.crf  heap_4.d  i2c.crf  i2c.d  list.crf  list.d  main.crf  main.d  port.crf  port.d  queue.crf  queue.d  spi.crf  spi.d  startup_stm32f103xb.d  stm32_car.axf  stm32_car.build_log.htm  stm32_car.hex  stm32_car.htm  stm32_car.lnp  stm32_car.map  stm32_car_stm32_car.dep  stm32f1xx_hal.crf  stm32f1xx_hal.d  stm32f1xx_hal_adc.crf  stm32f1xx_hal_adc.d  stm32f1xx_hal_adc_ex.crf  stm32f1xx_hal_adc_ex.d  stm32f1xx_hal_cortex.crf  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.crf  stm32f1xx_hal_dma.d  (+46 more)
